{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 39,
  "lineage": "e13f9410-c721-0027-310b-361dea1edaa4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036ac0711bcfb31ed",
            "arn": "arn:aws:ec2:us-east-1:090204645115:elastic-ip/eipalloc-036ac0711bcfb31ed",
            "association_id": "eipassoc-0c986dfe70cee377b",
            "domain": "vpc",
            "id": "eipalloc-036ac0711bcfb31ed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f9f45ba0a0d37f71",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-52-55-226-131.compute-1.amazonaws.com",
            "public_ip": "52.55.226.131",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "atlas-nat-eip"
            },
            "tags_all": {
              "Name": "atlas-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "eipalloc-036ac0711bcfb31ed",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "atlas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:internet-gateway/igw-0ead6df3d480b6cc9",
            "id": "igw-0ead6df3d480b6cc9",
            "owner_id": "090204645115",
            "region": "us-east-1",
            "tags": {
              "Name": "atlas-igw"
            },
            "tags_all": {
              "Name": "atlas-igw"
            },
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "igw-0ead6df3d480b6cc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "atlas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:loadbalancer/app/atlas-alb/67372c8741df4464",
            "arn_suffix": "app/atlas-alb/67372c8741df4464",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "atlas-alb-1078976071.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:090204645115:loadbalancer/app/atlas-alb/67372c8741df4464",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "atlas-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-02efc9f4ebcbd68e1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a831489d2b81170"
              },
              {
                "subnet_id": "subnet-09b1e348c3a5d3b67"
              }
            ],
            "subnets": [
              "subnet-01a831489d2b81170",
              "subnet-09b1e348c3a5d3b67"
            ],
            "tags": {
              "Name": "atlas-alb"
            },
            "tags_all": {
              "Name": "atlas-alb"
            },
            "vpc_id": "vpc-0867f13069e0b0191",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:loadbalancer/app/atlas-alb/67372c8741df4464"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:listener/app/atlas-alb/67372c8741df4464/2be3a5db1ca7cf04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:090204645115:listener/app/atlas-alb/67372c8741df4464/2be3a5db1ca7cf04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:loadbalancer/app/atlas-alb/67372c8741df4464",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:listener/app/atlas-alb/67372c8741df4464/2be3a5db1ca7cf04"
          },
          "dependencies": [
            "aws_lb.atlas",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:listener/app/atlas-alb/67372c8741df4464/c76c3435b42c66d7",
            "certificate_arn": "arn:aws:acm:us-east-1:090204645115:certificate/58da702b-c55b-4665-b13c-339b22aea605",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:targetgroup/atlas-tg/1a885386bdeace17",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:090204645115:listener/app/atlas-alb/67372c8741df4464/c76c3435b42c66d7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:loadbalancer/app/atlas-alb/67372c8741df4464",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:listener/app/atlas-alb/67372c8741df4464/c76c3435b42c66d7"
          },
          "dependencies": [
            "aws_acm_certificate.atlas",
            "aws_lb.atlas",
            "aws_lb_target_group.atlas",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "atlas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:targetgroup/atlas-tg/1a885386bdeace17",
            "arn_suffix": "targetgroup/atlas-tg/1a885386bdeace17",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:090204645115:targetgroup/atlas-tg/1a885386bdeace17",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:090204645115:loadbalancer/app/atlas-alb/67372c8741df4464"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "atlas-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "atlas-tg"
            },
            "tags_all": {
              "Name": "atlas-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090204645115:targetgroup/atlas-tg/1a885386bdeace17"
          },
          "dependencies": [
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "atlas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036ac0711bcfb31ed",
            "association_id": "eipassoc-0c986dfe70cee377b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a5c91d40a49bc67b",
            "network_interface_id": "eni-0f9f45ba0a0d37f71",
            "private_ip": "10.0.1.228",
            "public_ip": "52.55.226.131",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a831489d2b81170",
            "tags": {
              "Name": "atlas-nat"
            },
            "tags_all": {
              "Name": "atlas-nat"
            },
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "nat-0a5c91d40a49bc67b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.atlas",
            "aws_subnet.public_a",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:route-table/rtb-071c12b6044ebbe8f",
            "id": "rtb-071c12b6044ebbe8f",
            "owner_id": "090204645115",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a5c91d40a49bc67b",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "atlas-private"
            },
            "tags_all": {
              "Name": "atlas-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "rtb-071c12b6044ebbe8f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.atlas",
            "aws_nat_gateway.atlas",
            "aws_subnet.public_a",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:route-table/rtb-09b5d5df77c6e4be6",
            "id": "rtb-09b5d5df77c6e4be6",
            "owner_id": "090204645115",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ead6df3d480b6cc9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "atlas-public"
            },
            "tags_all": {
              "Name": "atlas-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "rtb-09b5d5df77c6e4be6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.atlas",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca520b090350855e",
            "region": "us-east-1",
            "route_table_id": "rtb-071c12b6044ebbe8f",
            "subnet_id": "subnet-0992f39c19a7556b7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "rtbassoc-0ca520b090350855e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.atlas",
            "aws_nat_gateway.atlas",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0710a1327f08c6b09",
            "region": "us-east-1",
            "route_table_id": "rtb-071c12b6044ebbe8f",
            "subnet_id": "subnet-0cb33143a0e283b87"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "rtbassoc-0710a1327f08c6b09",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.atlas",
            "aws_nat_gateway.atlas",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098ce7d26f34efc50",
            "region": "us-east-1",
            "route_table_id": "rtb-09b5d5df77c6e4be6",
            "subnet_id": "subnet-01a831489d2b81170"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "rtbassoc-098ce7d26f34efc50",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.atlas",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005b4126c284d917d",
            "region": "us-east-1",
            "route_table_id": "rtb-09b5d5df77c6e4be6",
            "subnet_id": "subnet-09b1e348c3a5d3b67"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "rtbassoc-005b4126c284d917d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.atlas",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:security-group/sg-02efc9f4ebcbd68e1",
            "description": "Security group for the Atlas application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound internet traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02efc9f4ebcbd68e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "atlas-alb-sg",
            "name_prefix": "",
            "owner_id": "090204645115",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "atlas-alb-sg"
            },
            "tags_all": {
              "Name": "atlas-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "sg-02efc9f4ebcbd68e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:security-group/sg-01c1ce5d3ccd781cd",
            "description": "Security group for Atlas ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic through NAT",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c1ce5d3ccd781cd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02efc9f4ebcbd68e1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "atlas-ecs-sg",
            "name_prefix": "",
            "owner_id": "090204645115",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "atlas-ecs-sg"
            },
            "tags_all": {
              "Name": "atlas-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "sg-01c1ce5d3ccd781cd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:subnet/subnet-0992f39c19a7556b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0992f39c19a7556b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090204645115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "atlas-private-a"
            },
            "tags_all": {
              "Name": "atlas-private-a"
            },
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "subnet-0992f39c19a7556b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:subnet/subnet-0cb33143a0e283b87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb33143a0e283b87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090204645115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "atlas-private-b"
            },
            "tags_all": {
              "Name": "atlas-private-b"
            },
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "subnet-0cb33143a0e283b87",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:subnet/subnet-01a831489d2b81170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a831489d2b81170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "090204645115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "atlas-public-a"
            },
            "tags_all": {
              "Name": "atlas-public-a"
            },
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "subnet-01a831489d2b81170",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:subnet/subnet-09b1e348c3a5d3b67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b1e348c3a5d3b67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "090204645115",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "atlas-public-b"
            },
            "tags_all": {
              "Name": "atlas-public-b"
            },
            "vpc_id": "vpc-0867f13069e0b0191"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "subnet-09b1e348c3a5d3b67",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.atlas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "atlas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090204645115:vpc/vpc-0867f13069e0b0191",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e238b52ba0adcd06",
            "default_route_table_id": "rtb-085fd89617fd29910",
            "default_security_group_id": "sg-07f0c9a5f69389397",
            "dhcp_options_id": "dopt-08bf00bf20f43ff0d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0867f13069e0b0191",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085fd89617fd29910",
            "owner_id": "090204645115",
            "region": "us-east-1",
            "tags": {
              "Name": "atlas-vpc"
            },
            "tags_all": {
              "Name": "atlas-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "090204645115",
            "id": "vpc-0867f13069e0b0191",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}